--- a/.env
+++ b/.env
@@ -5,14 +5,14 @@ DOCKER_INFLUXDB_INIT_MODE=setup
 
 # Primary InfluxDB admin/superuser credentials
 #
-DOCKER_INFLUXDB_INIT_USERNAME=changeme
-DOCKER_INFLUXDB_INIT_PASSWORD=changeme 
-DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=changeme 
+DOCKER_INFLUXDB_INIT_USERNAME=user
+DOCKER_INFLUXDB_INIT_PASSWORD=password
+DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=demo_token
 
 # Primary InfluxDB organization & bucket definitions
 # 
-DOCKER_INFLUXDB_INIT_ORG=changeme 
-DOCKER_INFLUXDB_INIT_BUCKET=changeme 
+DOCKER_INFLUXDB_INIT_ORG=initorg
+DOCKER_INFLUXDB_INIT_BUCKET=initbucket
 
 # Primary InfluxDB bucket retention period
 #
@@ -20,6 +20,11 @@ DOCKER_INFLUXDB_INIT_BUCKET=changeme
 # seconds (s), minutes (m), hours (h), days (d), and weeks (w).
 DOCKER_INFLUXDB_INIT_RETENTION=4d 
 
+#Telegraf
+#
+INFLUX_TOKEN=1234567890
+INFLUX_ORG=initorg
+INFLUX_BUCKET=initbucket
 
 # InfluxDB port & hostname definitions
 #
@@ -30,6 +35,9 @@ DOCKER_INFLUXDB_INIT_HOST=influxdb
 # 
 # Will be mounted to container and used as telegraf configuration
 TELEGRAF_CFG_PATH=./telegraf/telegraf.conf
+
+## Certificates files for MQTT
+MQTT_CERTS_PATH=./certs
 
 # Grafana port definition
 GRAFANA_PORT=3000
