--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     image: telegraf:1.19
     volumes:
       - ${TELEGRAF_CFG_PATH}:/etc/telegraf/telegraf.conf:rw
+      - ${MQTT_CERTS_PATH}:/etc/telegraf/certs:rw
     env_file:
       - .env
     depends_on:
