Resolving issues with MQTT broker env

--- a/.env
+++ b/.env
@@ -20,8 +20,14 @@ DOCKER_INFLUXDB_INIT_BUCKET=initbucket
 # seconds (s), minutes (m), hours (h), days (d), and weeks (w).
 DOCKER_INFLUXDB_INIT_RETENTION=4d 
 
+#MQTT
+#
+MQTT_BROKER=ssl://mosquitto-route-sdx-assignment-tolonenm.2.rahtiapp.fi:443
+TOPICS=tolonenm/toyota/#
+
 #Telegraf
 #
+INFLUX_URLS=http://influxdb:8086
 INFLUX_TOKEN=1234567890
 INFLUX_ORG=initorg
 INFLUX_BUCKET=initbucket
