--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -4,9 +4,7 @@
 
 [[inputs.mqtt_consumer]]
   servers = ["ssl://mosquitto-route-sdx-assignment-tolonenm.2.rahtiapp.fi:443"]
-  topics = [
-    "tolonenm/toyota/#"
-  ]
+  topics = ["${TOPICS}"]
   qos = 1
   insecure_skip_verify = true
   persistent_session = true
@@ -20,7 +18,7 @@
   data_type = "string"
 
 [[outputs.influxdb_v2]]
-  urls = ["http://influxdb:8086"] 
+  urls = ["${INFLUX_URLS}"] 
   token = "${INFLUX_TOKEN}"
   organization = "${INFLUX_ORG}"
   bucket = "${INFLUX_BUCKET}"
