--- a/.env
+++ b/.env
@@ -5,14 +5,14 @@ DOCKER_INFLUXDB_INIT_MODE=setup
 
 # Primary InfluxDB admin/superuser credentials
 #
-DOCKER_INFLUXDB_INIT_USERNAME=user
+DOCKER_INFLUXDB_INIT_USERNAME=admin
 DOCKER_INFLUXDB_INIT_PASSWORD=password
-DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=demo_token
+DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=ConnectiCar2024
 
 # Primary InfluxDB organization & bucket definitions
 # 
-DOCKER_INFLUXDB_INIT_ORG=initorg
-DOCKER_INFLUXDB_INIT_BUCKET=initbucket
+DOCKER_INFLUXDB_INIT_ORG=ConnectiCar
+DOCKER_INFLUXDB_INIT_BUCKET=ConnectiCar
 
 # Primary InfluxDB bucket retention period
 #
@@ -22,15 +22,15 @@ DOCKER_INFLUXDB_INIT_RETENTION=4d
 
 #MQTT
 #
-MQTT_BROKER=ssl://mosquitto-route-sdx-assignment-tolonenm.2.rahtiapp.fi:443
-TOPICS=tolonenm/toyota/#
+MQTT_BROKER=ssl://connecticar-mqtt.2.rahtiapp.fi:443
+TOPICS=connecticar/#
 
 #Telegraf
 #
 INFLUX_URLS=http://influxdb:8086
-INFLUX_TOKEN=1234567890
-INFLUX_ORG=initorg
-INFLUX_BUCKET=initbucket
+INFLUX_TOKEN=ConnectiCar2024
+INFLUX_ORG=ConnectiCar
+INFLUX_BUCKET=ConnectiCar
 
 # InfluxDB port & hostname definitions
 #
