--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -1,10 +1,11 @@
 [agent]
-  interval = "10s"
-  flush_interval = "10s"
+  interval = "5s"
+  flush_interval = "5s"
+  debug = true
 
 [[inputs.mqtt_consumer]]
-  servers = ["ssl://mosquitto-route-sdx-assignment-tolonenm.2.rahtiapp.fi:443"]
-  topics = ["${TOPICS}"]
+  servers = ["ssl://connecticar-mqtt.2.rahtiapp.fi:443"]
+  topics = ["connecticar/development/#"]
   qos = 1
   insecure_skip_verify = true
   persistent_session = true
@@ -14,12 +15,26 @@
   tls_ca = "/etc/telegraf/certs/ca.crt"
   tls_cert = "/etc/telegraf/certs/server.crt"
   tls_key = "/etc/telegraf/certs/server.key"
-  data_format = "value"
-  data_type = "string"
+  data_format = "json_v2"
+
+  [[inputs.mqtt_consumer.topic_parsing]]
+    topic = "connecticar/development/+/+"
+    tags = "project/state/category/subcategory"
+
+  [[inputs.mqtt_consumer.json_v2]]
+    measurement_name = "mqtt_data"
+
+    [[inputs.mqtt_consumer.json_v2.tag]]
+      path = "unit"
+      rename = "unit"
+
+    [[inputs.mqtt_consumer.json_v2.field]]
+      path = "data"
+      rename = "data"
+      type = "float"
 
 [[outputs.influxdb_v2]]
-  urls = ["${INFLUX_URLS}"] 
+  urls = ["${INFLUX_URLS}"]
   token = "${INFLUX_TOKEN}"
   organization = "${INFLUX_ORG}"
   bucket = "${INFLUX_BUCKET}"
-  
