--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -2,6 +2,7 @@
   interval = "5s"
   flush_interval = "5s"
   debug = true
+  hostname = "Rahti2"
 
 [[inputs.mqtt_consumer]]
   servers = ["ssl://connecticar-mqtt.2.rahtiapp.fi:443"]
@@ -22,7 +23,7 @@
     tags = "project/state/category/subcategory"
 
   [[inputs.mqtt_consumer.json_v2]]
-    measurement_name = "mqtt_data"
+    measurement_name = "ConnectiCar"
 
     [[inputs.mqtt_consumer.json_v2.tag]]
       path = "unit"
@@ -30,8 +31,8 @@
 
     [[inputs.mqtt_consumer.json_v2.field]]
       path = "data"
-      rename = "data"
-      type = "float"
+      rename = "Toyota"
+      type = "dynamic"
 
 [[outputs.influxdb_v2]]
   urls = ["${INFLUX_URLS}"]
